[package]
name = "xprs"
version = "0.0.1-beta3"
edition = "2021"
authors = ["Victor LEFEBVRE <contact@vic1707.xyz>"]
description = "Xprs is a flexible and extensible mathematical expression parser and evaluator for Rust, designed for simplicity and ease of use."
documentation = "https://docs.rs/xprs"
homepage = "https://github.com/vic1707/xprs"
license = "WTFPL"
readme = "README.md"
repository = "https://github.com/vic1707/xprs"
include = [
    "src/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "build.rs",
    "README.md",
    "LICENSE",
]
categories = ["science", "mathematics", "parser-implementations"]
keywords = ["parser", "math", "library"]
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { version = "5.10.0", features = ["fancy-no-backtrace"] }
thiserror = "1.0.56"

[build-dependencies]
rustc_version = "0.4.0"

[[bin]]
name = "repl"
path = "src/bin/repl.rs"

[features]
default = ["pemdas", "compile-time-optimizations"]
pemdas = []
pejmdas = []
compile-time-optimizations = []
